--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,17 +10,134 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
+
         <EditText
+            android:id="@+id/search_box"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:padding="10dp"
             android:background="@drawable/search_edit"
+            android:drawableLeft="@drawable/ic_search"
+            android:drawablePadding="5dp"
+            android:fontFamily="@font/alice"
             android:hint="Tìm sản phẩm mà bạn muốn"
-            android:drawableStart="5dp"
+            android:textStyle="bold"
+            android:padding="10dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:weightSum="2"
+            android:layout_marginTop="6dp"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/alice"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:text="Danh sách sản phẩm" />
+            <TextView
+                android:id="@+id/view_all_product1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:text="Xem tất cả"
+                android:layout_weight="1"
+                android:fontFamily="@font/alice"
+                android:gravity="end"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="#45E6FC"
+                />
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/pop_rec"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:weightSum="2"
+            android:layout_marginTop="6dp"
+            >
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/alice"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:text="Khám phá sản phẩm" />
+            <TextView
+                android:id="@+id/view_all_product2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Xem tất cả"
+                android:layout_weight="1"
+                android:fontFamily="@font/alice"
+                android:gravity="end"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="#45E6FC"
+                android:layout_marginRight="5dp"
+                />
+        </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/pop_rec2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:weightSum="2"
+            android:layout_marginTop="6dp"
+            >
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/alice"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:text="Đề xuất" />
+            <TextView
+                android:id="@+id/view_all_product"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Xem tất cả"
+                android:layout_weight="1"
+                android:fontFamily="@font/alice"
+                android:gravity="end"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="#45E6FC"
+                android:layout_marginRight="5dp"
+                />
+        </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/pop_rec3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            />
     </LinearLayout>
 
 </ScrollView>
