--- a/app/src/main/res/layout/activity_view_all.xml
+++ b/app/src/main/res/layout/activity_view_all.xml
@@ -4,18 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.category.CategoryFragment">
-
+    tools:context=".activity.ViewAllActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cat_rec"
+        android:id="@+id/view_all_rec"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
