--- a/app/src/main/res/layout/popular_category.xml
+++ b/app/src/main/res/layout/popular_category.xml
@@ -15,7 +15,7 @@
         android:gravity="center_horizontal"
         >
         <ImageView
-            android:id="@+id/category_img"
+            android:id="@+id/viewall_img"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/logo_xioami"
