--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -150,10 +150,12 @@
         android:id="@+id/detailed_button"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
         android:backgroundTint="@color/teal_700"
         android:text="Thêm Giỏ Hàng"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/detailed_minus"
         app:layout_constraintTop_toTopOf="@+id/relativeLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
